# rust-quadratic-solver

./: Cargo.toml  README.md  index.html
benches/: quadratic_bench.rs
src/: lib.rs  main.rs
